--- a/src/styles/singleRequest.css
+++ b/src/styles/singleRequest.css
@@ -4,7 +4,7 @@
 
 .request-title{
     line-height: 30px;
-    color: #083E9E;
+    color: #000000;
     font-weight: bold;
     text-align: left;
     text-transform: capitalize;
