--- a/src/styles/message.css
+++ b/src/styles/message.css
@@ -2,12 +2,12 @@
   min-height: 100vh;
 }
 .chat-head {
-  background-color: #083e9e;
+  background-color: #000000;
   color: #fff;
 }
 
 .chat-action {
-  background-color: #083e9e;
+  background-color: #000000;
   display: flex;
   flex-flow: nowrap;
   justify-content: center;
