--- a/src/styles/myActivities.css
+++ b/src/styles/myActivities.css
@@ -1,6 +1,6 @@
 .my-request-heading {
   font-weight: 700;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .my-request-card {
